--- a/style.scss
+++ b/style.scss
@@ -6,13 +6,26 @@
 }
 .container-fluid{
     width:1440px;
+    position: relative;
 }
 .about_user {
     background: #52c7b8;
     padding: 2% 0 0 16%;
     margin: 0;
 }
-
+.exti{
+    padding-top: 0.375rem;
+    position: absolute;
+    top: 803.383px;
+    width:25%;
+    z-index: 8;
+    padding: 20px;
+    padding-left: 69px;
+    width: 35%;
+    margin-left: 80px;
+    opacity: 0.9;
+    font-size: 28px;
+}
 .user_photo {
     width: 250px;
     border-radius: 25%;
